--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -39,6 +39,22 @@
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+
+    <script>
+        window.downloadFileFromStream = async (filename, contentStreamRef) => {
+            const arrayBuffer = await contentStreamRef.arrayBuffer();
+            const blob = new Blob([arrayBuffer], { type: 'text/csv;charset=utf-8;' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = filename || 'download.csv';
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+            URL.revokeObjectURL(url);
+        };
+    </script>
+
 </body>
 
 </html>
